<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Politicas_Privacidad">


    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/giveaway"
        android:paddingTop="30dp"
        android:text="@string/politicas"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/parrafo_principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="false"
                android:text="@string/parrafo_uno"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politicas_uno"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parrafo_uno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="true"
                android:text="@string/parrafo_dos"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politicas_dos"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="true"
                android:text="@string/parrafo_tres"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politicas_tres"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="true"
                android:text="@string/parrafo_cuatro"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politicas_cuatro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="true"
                android:text="@string/parrafo_cinco"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politicas_cinco"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="true"
                android:text="@string/parrafo_seis"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>