<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#9A9999"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="407dp"
            android:layout_height="5dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <ImageButton

            android:id="@+id/imageButton2"
            android:layout_width="86dp"
            android:layout_height="75dp"
            android:layout_marginTop="84dp"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/name_user"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/quien_soy"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:background="#F3F3F3"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    tools:ignore="SpeakableTextPresentCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/update" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/delete" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/que_habilidades"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginBottom="20dp">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/valor_uno"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox6"
                        app:layout_constraintHorizontal_bias="0.586"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/valor_dos"
                        app:layout_constraintBottom_toTopOf="@+id/checkBox9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.195"
                        app:layout_constraintStart_toEndOf="@+id/checkBox6"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <CheckBox
                        android:id="@+id/checkBox8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="284dp"
                        android:text="@string/valor_tres"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.651" />

                    <CheckBox
                        android:id="@+id/checkBox9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="44dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/valor_cuatro"
                        app:layout_constraintBottom_toTopOf="@+id/checkBox8"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="64dp"
                        android:text="@string/valor_cinco"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.481"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/valor_seis"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox5"
                        app:layout_constraintHorizontal_bias="0.692"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="56dp"
                        android:text="@string/valor_siete"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox9"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="56dp"
                        android:text="@string/valor_ocho"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/valor_nueve"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
                        app:layout_constraintHorizontal_bias="0.545"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

                    <Button
                        android:id="@+id/button17"
                        android:layout_width="100dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="32dp"
                        android:text="@string/update"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:text="@string/quien_eres"
                    android:textAlignment="center" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>