<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="364dp"
        android:background="@drawable/shape_tres"
        android:backgroundTint="#5826B1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/giveaway"
            android:paddingTop="20dp"
            android:text="@string/crear_cuenta"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/name_user"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="#ABD1EF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="#ABD1EF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextNumberPassword"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/te_contraseña"
                android:inputType="numberPassword"
                android:textAlignment="center"
                android:textColorHint="#ABD1EF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:text="@string/comentario"
            android:textAlignment="center"
            android:textColor="#FBFBFB" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00FFFFFF">

            <Button
                android:id="@+id/button11"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_cuatro"
                android:backgroundTint="#350F78"
                android:text="@string/crear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.566"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>